--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/lab": "^5.0.0-alpha.58",
-    "@mui/material": "^5.2.2",
-    "next": "^12.0.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.44.0",
-    "sharp": "^0.29.3"
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
+    "@fontsource/roboto": "latest",
+    "@mui/icons-material": "latest",
+    "@mui/lab": "latest",
+    "@mui/material": "latest",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "sass": "latest",
+    "sharp": "latest"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.4",
-    "@types/node": "^16.11.11",
-    "@types/react": "^17.0.37",
-    "cross-env": "^7.0.3",
+    "@next/bundle-analyzer": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "cross-env": "latest",
     "eslint": "7.32.0",
-    "eslint-config-next": "^12.0.4",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.0",
-    "typescript": "^4.5.2"
+    "eslint-config-next": "latest",
+    "eslint-config-prettier": "latest",
+    "prettier": "latest",
+    "typescript": "latest"
   }
 }
