--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ web_modules/
 # Optional eslint cache
 .eslintcache
 
+# Optional stylelint cache
+.stylelintcache
+
 # Microbundle cache
 .rpt2_cache/
 .rts2_cache_cjs/
@@ -69,10 +72,12 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv environment variable files
 .env
-.env.test
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -95,6 +100,10 @@ dist
 # vuepress build output
 .vuepress/dist
 
+# vuepress v2.x temp and cache directory
+.temp
+.cache
+
 # Serverless directories
 .serverless/
 
@@ -107,8 +116,7 @@ dist
 # TernJS port file
 .tern-port
 
-# VSCode
-.vscode
+# Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
 # yarn v2
@@ -117,3 +125,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# should remove after cloning
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
