--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sharp": "latest"
   },
   "devDependencies": {
+    "@babel/core": "latest",
     "@next/bundle-analyzer": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
