--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,15 @@
     "module": "esnext",
     "target": "es2021",
     "moduleResolution": "node",
+    "jsxImportSource": "@emotion/react",
     "lib": ["dom", "dom.iterable", "esnext"],
     "noEmit": true,
     "allowJs": true,
     "sourceMap": true,
     "incremental": true,
     "skipLibCheck": true,
-    "esModuleInterop": true,
     "isolatedModules": true,
+    "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
