--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,27 @@
+root: true
 env:
   es2021: true
   node: true
   browser: true
+parser: '@typescript-eslint/parser'
+parserOptions:
+  project: tsconfig.json
+  ecmaVersion: latest
+  ecmaFeatures:
+    jsx: true
+ignorePatterns:
+  - next.config.mjs
+plugins:
+  - '@typescript-eslint'
 extends:
-  - next
+  - 'eslint:recommended'
+  - 'plugin:@typescript-eslint/recommended'
+  - 'plugin:@typescript-eslint/recommended-requiring-type-checking'
   - next/core-web-vitals
   - prettier
 rules:
   react/display-name: off
   react-hooks/exhaustive-deps: off
+  import/no-anonymous-default-export:
+    - error
+    - allowArrowFunction: true
