--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "private": true,
-  "engines": { "node": ">= 17.0.0" },
-  "browserslist": ["> 1%", "last 1 version", "not dead"],
+  "engines": {
+    "node": ">= 17.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 1 version",
+    "not dead"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
