--- a/package.json
+++ b/package.json
@@ -9,33 +9,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --no-cache",
     "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/lab": "^5.0.0-alpha.61",
-    "@mui/material": "^5.2.5",
-    "@mui/system": "^5.2.5",
+    "@stitches/react": "^1.2.6",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.45.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "the-new-css-reset": "^1.4.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.7",
     "@types/node": "^17.0.5",
     "@types/react": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.5.0",
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1",
+    "prettier-plugin-organize-imports": "^2.3.4",
     "typescript": "^4.5.4"
   }
 }
