--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,19 @@
 root: true
 env:
-  es2021: true
   node: true
+  es2021: true
   browser: true
 parser: '@typescript-eslint/parser'
+plugins:
+  - '@typescript-eslint'
+extends:
+  - eslint:recommended
+  - plugin:import/recommended
+  - plugin:import/typescript
+  - plugin:@typescript-eslint/recommended
+  - plugin:@typescript-eslint/recommended-requiring-type-checking
+  - next/core-web-vitals
+  - prettier
 parserOptions:
   project: tsconfig.json
   sourceType: module
@@ -11,18 +21,20 @@ parserOptions:
   ecmaFeatures:
     jsx: true
     impliedStrict: true
+settings:
+  import/parsers:
+    '@typescript-eslint/parser':
+      - '.ts'
+      - '.js'
+      - '.tsx'
+      - '.jsx'
+  import/resolver:
+    typescript:
+      alwaysTryTypes: true
+      project: tsconfig.json
 ignorePatterns:
   - next.config.mjs
-plugins:
-  - '@typescript-eslint'
-extends:
-  - 'eslint:recommended'
-  - 'plugin:@typescript-eslint/recommended'
-  - 'plugin:@typescript-eslint/recommended-requiring-type-checking'
-  - next/core-web-vitals
-  - prettier
 rules:
   react/display-name: off
   import/no-anonymous-default-export:
-    - error
     - allowArrowFunction: true
