--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,4 +1,3 @@
-# prettier recommended default config (with exception of singleQuote)
 printWidth: 80
 tabWidth: 2
 useTabs: false
@@ -10,3 +9,9 @@ trailingComma: es5
 bracketSpacing: true
 bracketSameLine: false
 arrowParens: always
+importOrderSortSpecifiers: true
+importOrderGroupNamespaceSpecifiers: true
+importOrderParserPlugins:
+  - typescript
+  - classProperties
+  - decorators-legacy
