--- a/package.json
+++ b/package.json
@@ -9,28 +9,32 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --no-cache",
-    "analyze": "ANALYZE=true next build"
+    "lint": "next lint --no-cache"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.6",
-    "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sharp": "^0.29.3",
-    "the-new-css-reset": "^1.4.4"
+    "@stitches/react": "latest",
+    "axios": "latest",
+    "dayjs": "latest",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "sharp": "latest",
+    "swr": "latest",
+    "the-new-css-reset": "latest",
+    "type-fest": "latest"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.7",
-    "@types/node": "^17.0.5",
-    "@types/react": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "eslint": "^8.5.0",
-    "eslint-config-next": "^12.0.7",
-    "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.5.1",
-    "prettier-plugin-organize-imports": "^2.3.4",
-    "typescript": "^4.5.4"
+    "@trivago/prettier-plugin-sort-imports": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-import-resolver-typescript": "latest",
+    "eslint-plugin-import": "latest",
+    "prettier": "latest",
+    "typescript": "latest"
   }
 }
