--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ env:
   es2021: true
   browser: true
 parser: '@typescript-eslint/parser'
+ignorePatterns: next.config.mjs
 plugins:
   - '@typescript-eslint'
 extends:
@@ -32,8 +33,6 @@ settings:
     typescript:
       alwaysTryTypes: true
       project: tsconfig.json
-ignorePatterns:
-  - next.config.mjs
 rules:
   import/no-anonymous-default-export:
     - allowArrowFunction: true
