--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "jsx": "preserve",
-    "module": "ES2020",
-    "target": "ESNext",
+    "module": "esnext",
+    "target": "es2019",
     "moduleResolution": "node",
-    "lib": ["ESNext", "dom", "dom.iterable"],
+    "lib": ["esnext", "dom", "dom.iterable"],
     "strict": true,
     "noEmit": true,
     "allowJs": true,
