--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,38 +1,14 @@
-root: true
+# https://nextjs.org/docs/basic-features/eslint#recommended-plugin-ruleset
 env:
   node: true
-  es2021: true
+  es2022: true
   browser: true
-parser: '@typescript-eslint/parser'
-ignorePatterns: next.config.mjs
-plugins:
-  - '@typescript-eslint'
 extends:
   - eslint:recommended
-  - plugin:import/recommended
-  - plugin:import/typescript
-  - plugin:@typescript-eslint/recommended
-  - plugin:@typescript-eslint/recommended-requiring-type-checking
   - next/core-web-vitals
   - prettier
-parserOptions:
-  project: tsconfig.json
-  sourceType: module
-  ecmaVersion: latest
-  ecmaFeatures:
-    jsx: true
-    impliedStrict: true
-settings:
-  import/parsers:
-    '@typescript-eslint/parser':
-      - '.ts'
-      - '.js'
-      - '.tsx'
-      - '.jsx'
-  import/resolver:
-    typescript:
-      alwaysTryTypes: true
-      project: tsconfig.json
+ignorePatterns:
+  - next.config.mjs
 rules:
   import/no-anonymous-default-export:
     - warn
