--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "include": ["next-env.d.ts", "src"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "jsx": "preserve",
     "target": "esnext",
@@ -19,7 +21,5 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": { "@/*": ["src/*"] }
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  }
 }
