--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,4 +1,6 @@
 # https://nextjs.org/docs/basic-features/eslint#recommended-plugin-ruleset
+root: true
+ignorePatterns: next.config.mjs
 env:
   node: true
   es2022: true
@@ -6,8 +8,6 @@ env:
 extends:
   - next/core-web-vitals
   - prettier
-ignorePatterns:
-  - next.config.mjs
 rules:
   import/no-anonymous-default-export:
     - warn
