--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -21,7 +21,7 @@ importOrder:
   - '^(.*)[.]scss$'
   - '^react$'
   - '^react-dom$'
-  - '^next[/](.*)$'
+  - '^next([/].*)?$'
   - '<THIRD_PARTY_MODULES>'
   - '^@[/](.*)$'
   - '^[.][/](.*)$'
