update next & react

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "private": true,
-  "packageManager": "pnpm@6.32.3",
   "engines": {
     "node": ">=16.8.0"
   },
@@ -22,10 +21,10 @@
     "@stitches/react": "latest",
     "axios": "latest",
     "dayjs": "latest",
-    "next": "12.1.1",
+    "next": "latest",
     "next-themes": "latest",
-    "react": "18.0.0-rc.2",
-    "react-dom": "18.0.0-rc.2",
+    "react": "latest",
+    "react-dom": "latest",
     "reactive-button": "latest",
     "sharp": "latest",
     "type-fest": "latest"
