--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,7 @@
 # https://nextjs.org/docs/basic-features/eslint#recommended-plugin-ruleset
 root: true
-ignorePatterns: next.config.mjs
-env:
-  node: true
-  es2022: true
-  browser: true
-extends:
-  - next/core-web-vitals
-  - prettier
+env: { node: true, es2022: true, browser: true }
+extends: [next/core-web-vitals, prettier]
 rules:
   import/no-anonymous-default-export:
-    - warn
-    - allowArrowFunction: true
+    [warn, { allowObject: true, allowArrowFunction: true }]
