--- a/package.json
+++ b/package.json
@@ -17,29 +17,29 @@
     "analyze": "cross-env ANALYZE='true' next build"
   },
   "dependencies": {
-    "@radix-ui/colors": "latest",
-    "@stitches/react": "latest",
-    "axios": "latest",
-    "dayjs": "latest",
-    "next": "latest",
-    "next-themes": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "reactive-button": "latest",
-    "sharp": "latest",
-    "type-fest": "latest"
+    "@radix-ui/colors": "^0.1.8",
+    "@stitches/react": "^1.2.8",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.3",
+    "next": "^12.2.0",
+    "next-themes": "^0.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactive-button": "^1.3.12",
+    "sharp": "^0.30.7",
+    "type-fest": "^2.15.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "latest",
-    "@trivago/prettier-plugin-sort-imports": "latest",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "critters": "latest",
-    "cross-env": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "eslint-config-prettier": "latest",
-    "prettier": "latest",
-    "typescript": "latest"
+    "@next/bundle-analyzer": "^12.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "critters": "^0.0.16",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.18.0",
+    "eslint-config-next": "^12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.7.4"
   }
 }
