--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "last 1 version",
     "not dead"
   ],
+  "prettier": {
+    "singleQuote": true
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -19,27 +22,26 @@
   "dependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@stitches/react": "^1.2.8",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.5",
-    "next": "^12.3.1",
+    "axios": "1.1.3",
+    "dayjs": "^1.11.7",
+    "next": "^13.0.6",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reactive-button": "^1.3.13",
-    "sharp": "^0.31.0",
-    "type-fest": "^3.0.0"
+    "sharp": "^0.31.2",
+    "type-fest": "^3.4.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.3.1",
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.21",
+    "@next/bundle-analyzer": "^13.0.6",
+    "@types/node": "^18.11.15",
+    "@types/react": "^18.0.26",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.23.1",
-    "eslint-config-next": "^12.3.1",
+    "eslint": "^8.29.0",
+    "eslint-config-next": "^13.0.6",
     "eslint-config-prettier": "^8.5.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.3"
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   }
 }
